tmux and vim and common cmds

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,8 @@ copyright: Copyright &copy; 2022 潘江明
 nav:
   - Welcome: index.md
   - Linux:
-    - 配置vim: linux/vimrc.md
+    - 常用文件管理命令: linux/command.md
+    - tmux和vim: linux/tmux_and_vim.md
   - 关于:
     - 关于作者: about/aboutme.md
     - 关于PJM Wiki: about/aboutwiki.md
