shell var shuzu echo expr

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,10 @@ extra:
 
 # Latex
 markdown_extensions:
+  - pymdownx.highlight:
+      linenums: true
+  - pymdownx.superfences
+  - pymdownx.inlinehilite
   - pymdownx.arithmatex:
       generic: true
 
