--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,9 @@ theme:
   palette:
     primary: 'blue'
     accent: 'red'
+  favicon: img/favicon.png
+  icon:
+    logo: material/library
 
 # copyright
 copyright: Copyright &copy; 2022 潘江明
@@ -45,6 +48,7 @@ markdown_extensions:
       linenums: true
   - pymdownx.superfences
   - pymdownx.inlinehilite
+  - pymdownx.keys
   - pymdownx.arithmatex:
       generic: true
 
