--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,7 +22,7 @@ theme:
     logo: material/library
 
 # copyright
-copyright: Copyright &copy; 2022 潘江明
+copyright: Copyright &copy; 2022 <a href="https://pjmcode.top" target="_blank" rel="noopener noreferrer">潘江明</a>
 
 # condition
 nav:
@@ -54,8 +54,9 @@ nav:
     - 常用命令: linux/common_commond.md
   - Leetcode:
     - 剑指 Offer 03. 数组中重复的数字: leetcode/1.md
+    - 223. 矩形面积: leetcode/2.md
   - Java:
-    - 前言: java/index.md
+    - Java 前言: java/index.md
     - JavaSE:
       - Java语法规范: java/javase/JavaSE笔记（一）.md
       - Java对象和多态 （面向对象）: java/javase/JavaSE笔记（二）.md
