--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@
 site_name: PJM Wiki
 site_description: PJM Wiki 是一个计算机知识整合的站点
 site_author: 潘江明
-site_url: https://pjimming.github.io/PJM-Wiki/
+site_url: https://wiki.pjmcode.top/
 strict: false
 
 # Repository
