--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,9 +52,12 @@ nav:
     - 管道: linux/conduit.md
     - 环境变量: linux/environment_variable.md
     - 常用命令: linux/common_commond.md
-  - Leetcode:
-    - 剑指 Offer 03. 数组中重复的数字: leetcode/1.md
-    - 223. 矩形面积: leetcode/2.md
+  - Algorithm:
+    - leetcode:
+      - 1. 两数之和: algorithm/leetcode/1.md
+      - 223. 矩形面积: algorithm/leetcode/223.md
+    - 剑指offer:
+      - 03. 数组中重复的数字: algorithm/offer/3.md
   - Java:
     - Java 前言: java/index.md
     - JavaSE:
