--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,9 +55,11 @@ nav:
   - Algorithm:
     - leetcode:
       - 1. 两数之和: algorithm/leetcode/1.md
+      - 206. 反转链表: algorithm/leetcode/206.md
       - 223. 矩形面积: algorithm/leetcode/223.md
     - 剑指offer:
       - 03. 数组中重复的数字: algorithm/offer/3.md
+      - 24. 反转链表: algorithm/offer/24.md
   - Java:
     - Java 前言: java/index.md
     - JavaSE:
