--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,7 @@ nav:
     - 剑指offer:
       - 03. 数组中重复的数字: algorithm/offer/3.md
       - 24. 反转链表: algorithm/offer/24.md
+      - 65. 不用加减乘除做加法: algorithm/offer/65.md
   - Java:
     - Java 前言: java/index.md
     - JavaSE:
