--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@
 site_name: PJM Wiki
 site_description: PJM Wiki 是一个计算机知识整合的站点
 site_author: 潘江明
-site_url: https://wiki.pjmcode.top/
+site_url: 'https://wiki.pjmcode.top/'
 strict: false
 
 # Repository
@@ -78,6 +78,7 @@ nav:
       - 206. 反转链表: algorithm/leetcode/206.md
       - 223. 矩形面积: algorithm/leetcode/223.md
       - 341. 扁平化嵌套列表迭代器: algorithm/leetcode/341.md
+      - 456. 132 模式: algorithm/leetcode/456.md
       - 1603. 设计停车系统: algorithm/leetcode/1603.md
     - 剑指offer:
       - 03. 数组中重复的数字: algorithm/offer/3.md
