--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,6 +88,8 @@ nav:
       - 24. 反转链表: algorithm/offer/24.md
       - 25. 合并两个排序的链表: algorithm/offer/25.md
       - 65. 不用加减乘除做加法: algorithm/offer/65.md
+    - 程序员面试金典:
+      - 17.21. 直方图的水量: algorithm/mst/17_21.md
   - Java:
     - Java 前言: java/index.md
     - JavaSE:
