--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,6 +92,7 @@ nav:
       - 17.21. 直方图的水量: algorithm/mst/17_21.md
     - 线段树:
       - 线段树简介: algorithm/segmentTree/1.md
+      - 最大数(单点修改，区间查询): algorithm/segmentTree/2.md
   - Java:
     - Java 前言: java/index.md
     - JavaSE:
@@ -102,6 +103,13 @@ nav:
       - Java I/O: java/javase/JavaSE笔记（五）.md
       - Java多线程: java/javase/JavaSE笔记（六）.md
       - Java反射和注解: java/javase/JavaSE笔记（七）.md
+  - LaTeX:
+    - 基础语法: latex/basic.md
+    - 函数、符号及特殊字符: latex/symbols.md
+    - 矩阵、条件表达式、方程组: latex/env.md
+    - 字体: latex/font.md
+    - 外部链接: latex/links.md
+    - 颜色: latex/colors.md
   - 关于:
     - 关于作者: about/aboutme.md
     - 关于PJM Wiki: about/aboutwiki.md
@@ -123,7 +131,6 @@ markdown_extensions:
   - pymdownx.snippets
   - pymdownx.highlight:
       linenums: true
-  - pymdownx.superfences
   - pymdownx.inlinehilite
   - pymdownx.keys
   - pymdownx.arithmatex:
