--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,7 @@ nav:
       - 341. 扁平化嵌套列表迭代器: algorithm/leetcode/341.md
       - 456. 132 模式: algorithm/leetcode/456.md
       - 713. 乘积小于K的子数组: algorithm/leetcode/713.md
+      - 1011. 在 D 天内送达包裹的能力: algorithm/leetcode/1011.md
       - 1143. 最长公共子序列: algorithm/leetcode/1143.md
       - 1603. 设计停车系统: algorithm/leetcode/1603.md
     - 剑指offer:
