--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,6 +95,7 @@ nav:
     - 线段树:
       - 线段树简介: algorithm/segmentTree/1.md
       - 最大数(单点修改，区间查询): algorithm/segmentTree/2.md
+      - Bin Packing Problem(单点修改，区间查询): algorithm/segmentTree/4.md
       - Can you answer these queries III(单点修改，区间查询): algorithm/segmentTree/3.md
   - Java:
     - Java 前言: java/index.md
