--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,7 +43,9 @@ copyright: Copyright &copy; 2022 <a href="https://pjmcode.top" target="_blank" r
 
 # condition
 nav:
-  - Welcome: index.md
+  - Welcome: 
+    - Welcome: index.md
+    - 我的算法竞赛之路: acm/acm.md
   - Linux:
     - WSL2的安装和使用: linux/first_work.md
     - 常用文件管理命令: linux/command.md
@@ -97,6 +99,7 @@ nav:
       - 最大数(单点修改，区间查询): algorithm/segmentTree/2.md
       - Bin Packing Problem(单点修改，区间查询): algorithm/segmentTree/4.md
       - Can you answer these queries III(单点修改，区间查询): algorithm/segmentTree/3.md
+      - Interval GCD(单点修改，区间查询): algorithm/segmentTree/5.md
   - Java:
     - Java 前言: java/index.md
     - JavaSE:
