--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,6 +90,7 @@ nav:
       - 1603. 设计停车系统: algorithm/leetcode/1603.md
     - 剑指offer:
       - 03. 数组中重复的数字: algorithm/offer/3.md
+      - 22. 链表中倒数第k个节点: algorithm/offer/22.md
       - 24. 反转链表: algorithm/offer/24.md
       - 25. 合并两个排序的链表: algorithm/offer/25.md
       - 65. 不用加减乘除做加法: algorithm/offer/65.md
