--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,6 +96,8 @@ nav:
       - 65. 不用加减乘除做加法: algorithm/offer/65.md
     - 程序员面试金典:
       - 17.21. 直方图的水量: algorithm/mst/17_21.md
+    - 背包问题:
+      - 背包模板: algorithm/bag/1.md
     - 线段树:
       - 线段树简介: algorithm/segmentTree/1.md
       - 最大数(单点修改，区间查询): algorithm/segmentTree/2.md
