--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,6 +100,8 @@ nav:
       - 背包模板: algorithm/bag/1.md
     - 树状数组:
       - 树状数组简介: algorithm/bit/1.md
+      - 【模板】树状数组1(单点修改，区间查询): algorithm/bit/2.md
+      - 【模板】树状数组2(区间修改，单点查询): algorithm/bit/3.md
     - 线段树:
       - 线段树简介: algorithm/segmentTree/1.md
       - 最大数(单点修改，区间查询): algorithm/segmentTree/2.md
