--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,6 +98,8 @@ nav:
       - 17.21. 直方图的水量: algorithm/mst/17_21.md
     - 背包问题:
       - 背包模板: algorithm/bag/1.md
+    - 并查集:
+      - 并查集简介: algorithm/dsu/1.md
     - 树状数组:
       - 树状数组简介: algorithm/bit/1.md
       - 【模板】树状数组1(单点修改，区间查询): algorithm/bit/2.md
