--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -189,6 +189,9 @@ markdown_extensions:
   - pymdownx.keys
   - pymdownx.arithmatex:
       generic: true
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
 
 extra_javascript:
   - js/mathjax.js
