--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,6 +97,8 @@ nav:
     - 程序员面试金典:
       - 17.21. 直方图的水量: algorithm/mst/17_21.md
     - 数学基础知识: algorithm/math/1.md
+    - 欧拉函数:
+      - 欧拉函数基础: algorithm/math/euler/1.md
     - 背包问题:
       - 背包模板: algorithm/bag/1.md
     - 并查集:
