--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -161,6 +161,12 @@ nav:
       - 多线程编程核心: java/juc/JUC笔记（二）.md
       - 并发编程进阶: java/juc/JUC笔记（三）.md
     - 鸣谢: java/index.md
+  - WEB:
+    - HTML基础标签:
+      - HTML文件结构: web/html/1.md
+      - 文本标签: web/html/2.md
+      - 图片: web/html/3.md
+      - 音频与视频: web/html/4.md
   - LaTeX:
     - 基础语法: latex/basic.md
     - 函数、符号及特殊字符: latex/symbols.md
@@ -203,5 +209,9 @@ markdown_extensions:
 extra_javascript:
   - js/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+  # - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - '_static/js/extra.js?v=16'
 
+extra_css:
+  - '_static/css/extra.css?v=13'
