--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,7 @@ nav:
       - 73. 矩阵置零: algorithm/leetcode/73.md
       - 82. 删除排序链表中的重复元素 II: algorithm/leetcode/82.md
       - 150. 逆波兰表达式求值: algorithm/leetcode/150.md
+      - 173. 二叉搜索树迭代器: algorithm/leetcode/173.md
       - 191. 位1的个数: algorithm/leetcode/191.md
       - 206. 反转链表: algorithm/leetcode/206.md
       - 223. 矩形面积: algorithm/leetcode/223.md
