--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -108,6 +108,9 @@ nav:
   - 动态规划:
     - 背包问题:
       - 背包模板: algorithm/bag/1.md
+    - 数字三角形模型:
+      - 摘花生: dp/triangle/1.md
+      - 最低通行费: dp/triangle/2.md
   - 数据结构:
     - 并查集:
       - 并查集简介: algorithm/dsu/1.md
