--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -120,6 +120,8 @@ nav:
       - 烽火传递: dp/mono-queue/4.md
       - 绿色通道: dp/mono-queue/5.md
       - 理想的正方形: dp/mono-queue/6.md
+    - 斜率优化DP:
+      - 任务安排 1: dp/slope/1.md
   - 数据结构:
     - 单调队列:
       - 单调队列简介: ds/monotonous-queue/1.md
