--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -167,6 +167,9 @@ nav:
     - 最小生成树:
       - 走廊泼水节: graph/mst/1.md
       - 秘密的牛奶运输: graph/mst/2.md
+    - 负环:
+      - 观光奶牛: graph/spfa/1.md
+      - 单词环: graph/spfa/2.md
   - 数论:
     - 数学基础知识: algorithm/math/1.md
     - 欧拉函数:
