--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -176,6 +176,15 @@ nav:
       - 区间: graph/spfa/5.md
       - 排队布局: graph/spfa/6.md
       - 雇佣收银员: graph/spfa/7.md
+    - 最近公共祖先:
+      - 距离: graph/lca/1.md
+      - 次小生成树: graph/lca/2.md
+    - 有向图的强连通分量:
+      - 强连通分量: graph/scc/1.md
+      - 受欢迎的牛: graph/scc/2.md
+      - 学校网络: graph/scc/3.md
+      - 最大半连通子图: graph/scc/4.md
+      - 银河: graph/scc/5.md
   - 数论:
     - 数学基础知识: algorithm/math/1.md
     - 欧拉函数:
