--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -197,9 +197,10 @@ nav:
       - 可达性统计: graph/topo/4.md
       - 车站分级: graph/topo/5.md
   - 数论:
-    - 数学基础知识: algorithm/math/1.md
+    - 数学基础知识: math/1.md
     - 欧拉函数:
-      - 欧拉函数基础: algorithm/math/euler/1.md
+      - 欧拉函数基础: math/euler/1.md
+      - 可见的点: math/euler/2.md
   - Java:
     - JavaSE:
       - Java语法规范: java/javase/JavaSE笔记（一）.md
