--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,7 @@ nav:
   - Algorithm:
     - 杂题:
       - Absolute Sorting: algorithm/problem/1.md
+      - Lucky Chains: algorithm/problem/2.md
     - leetcode:
       - 1. 两数之和: algorithm/leetcode/1.md
       - 21. 合并两个有序链表: algorithm/leetcode/21.md
