--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,6 +76,8 @@ nav:
       - Absolute Sorting: algorithm/problem/1.md
       - Lucky Chains: algorithm/problem/2.md
       - Meeting on the Line: algorithm/problem/3.md
+      - Empty Graph: algorithm/problem/4.md
+      - Counting Arrays: algorithm/problem/5.md
     - leetcode:
       - 1. 两数之和: algorithm/leetcode/1.md
       - 21. 合并两个有序链表: algorithm/leetcode/21.md
