add rating & cf 7,8

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,8 @@ nav:
       - Empty Graph: algorithm/problem/4.md
       - Counting Arrays: algorithm/problem/5.md
       - FLT: algorithm/problem/6.md
+      - Rectangular Congruence: algorithm/problem/7.md
+      - Zeros and Ones: algorithm/problem/8.md
     - leetcode:
       - 1. 两数之和: algorithm/leetcode/1.md
       - 21. 合并两个有序链表: algorithm/leetcode/21.md
