--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,6 +101,7 @@ nav:
       - 1143. 最长公共子序列: algorithm/leetcode/1143.md
       - 1293. 网格中的最短路径: algorithm/leetcode/1293.md
       - 1603. 设计停车系统: algorithm/leetcode/1603.md
+      - 1631. 最小体力消耗路径: algorithm/leetcode/1631.md
     - 剑指offer:
       - 03. 数组中重复的数字: algorithm/offer/3.md
       - 22. 链表中倒数第k个节点: algorithm/offer/22.md
