--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,8 @@ nav:
       - Tokitsukaze and Function: algorithm/problem/14.md
       - Tokitsukaze and Musynx: algorithm/problem/15.md
       - Tokitsukaze and Synthesis and Traits: algorithm/problem/16.md
+      - 灵魂碎片的收集: algorithm/problem/17.md
+      - 永恒守候的爱恋: algorithm/problem/18.md
     - leetcode:
       - 1. 两数之和: algorithm/leetcode/1.md
       - 21. 合并两个有序链表: algorithm/leetcode/21.md
