--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,7 @@ theme:
       name: Switch to light mode
 
 # copyright
-copyright: Copyright &copy; 2022 <a href="https://pjmcode.top" target="_blank" rel="noopener noreferrer">潘江明</a>
+copyright: Copyright &copy; 2022-2023 <a href="https://pjmcode.top" target="_blank" rel="noopener noreferrer">潘江明</a>
 
 # condition
 nav:
