--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,8 @@ nav:
   - 公开课:
     - MIT6.824:
       - Lab 1:MapReduce: MIT6.824/lab1.md
+      - Lab 2:Raft:
+        - Lab 2A:Leader Election: MIT6.824/lab2A.md
   - Algorithm:
     - 杂题:
       - Absolute Sorting: algorithm/problem/1.md
